add README and k8s deployment configs

--- a/src/docker-ready/frontend/index.html
+++ b/src/docker-ready/frontend/index.html
@@ -14,12 +14,8 @@
     <div class="container">
         <header class="d-flex flex-wrap align-items-center py-3 mb-4 border-bottom">
               <a href="/" class="d-flex mb-2 mb-md-0 text-dark text-decoration-none">
-                Slo-anonnymizer
+                SLOAnon
               </a>
-
-              <ul class="nav col-12 col-md-auto mb-2 mb-md-0">
-                <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-              </ul>
         </header>
 
         <div class="pt-4">
@@ -48,7 +44,7 @@
                         <option value="medium">Medium</option>
                         <option value="high">High</option>
                       </select>
-                    <button class="btn btn-primary flex-grow-1" id="confirm">Anonimiziraj</button>
+                    <button class="btn btn-primary flex-grow-1" id="confirm">Anonymize</button>
                     <div id="loading" class="visually-hidden spinner-grow ms-2" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
